k8s-manifests/nodebb-app-for-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebb
  namespace: nodebb
  labels:
    app: nodebb
spec:
  selector:
    matchLabels:
      app: nodebb
      tier: frontend
  template:
    metadata:
      labels:
        app: nodebb
        tier: frontend
    spec:
      containers:
        - image: nibrev/nodebb:stable
          name: nodebb
          ports:
            - containerPort: 4567
              name: nodebb
          volumeMounts:
            - name: nodebb-pv
              mountPath: /data
      volumes:
        - name: nodebb-pv
          persistentVolumeClaim:
            claimName: nodebb
---
apiVersion: v1
kind: Service
metadata:
  name: nodebb
  namespace: nodebb
  labels:
    app: nodebb
spec:
  selector:
    app: nodebb
    tier: frontend
  ports:
    - port: 80
      targetPort: 4567
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodebb
  namespace: nodebb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: nodebb.roboepics.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodebb
                port:
                  number: 80
  tls:
    - hosts:
        - nodebb.roboepics.com
      secretName: roboepics-nodebb-tls
